Script rewrite WIP

--- a/TestAutomation/scripts/template/template.html
+++ b/TestAutomation/scripts/template/template.html
@@ -47,6 +47,7 @@
       <th>{case}</th>
       <th>{method}</th>
       <th>{inputs}</th>
+      <th>{output}</th>
       <th>{oracle}</th>
       <th class={pf}>{result}</th>
     </tr>
