Output modified for requirements; temp ignored

--- a/TestAutomation/scripts/template/template.html
+++ b/TestAutomation/scripts/template/template.html
@@ -47,6 +47,7 @@
   <table class=results>
     <tr>
       <th>Case</th>
+      <th>Requirement</th>
       <th>Method</th>
       <th>Inputs</th>
       <th>Output</th>
@@ -55,6 +56,7 @@
     </tr>
     <tr>
       <th>{case}</th>
+      <th>{requirement}</th>
       <th>{method}</th>
       <th>{inputs}</th>
       <th>{output}</th>
